# cartograph

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md
.claude/rules/: api-patterns.md  code-style.md  testing.md
.claude/skills/explain-code/: SKILL.md  reference.md
.claude/skills/review-pr/: SKILL.md  review-gaps-reference.md
.claude/skills/write-tests/: SKILL.md  reference.md
.github/workflows/: ci.yml
cartograph/: __init__.py  cli.py  config.py  core.py
cartograph/blast/: __init__.py  analyzer.py  diff.py  models.py  renderer.py  tests_index.py
cartograph/cache/: __init__.py
cartograph/graph/: call_graph.py  models.py
cartograph/llm/: __init__.py  narrator.py  prompts.py  provider.py
cartograph/parser/: ast_parser.py  protocols.py  registry.py
cartograph/parser/languages/python/: __init__.py  adapter.py
cartograph/parser/shared/: http_patterns.py
cartograph/v2/: __init__.py  cli.py  config.py  pipeline.py
cartograph/v2/analyses/: __init__.py  _async_patterns.py  _chains.py  _coverage.py  _cycles.py  _dead.py  _diff.py  _impact.py  _orm.py  _routes.py
cartograph/v2/benchmark/: metrics.py  runner.py
cartograph/v2/benchmark/adapters/: v1_to_common.py  v2_to_common.py
cartograph/v2/cache/: store.py
cartograph/v2/cli/: __init__.py  _group.py  _render.py  _shared.py
cartograph/v2/cli/commands/: __init__.py  analyze.py  benchmark.py  callers.py  context.py  coverage.py  dead.py  diff.py  entries.py  explain.py  impact.py  init.py  mcp.py  scan.py  search.py  serve.py  trace.py
cartograph/v2/ir/: __init__.py  analyzed.py  annotated.py  base.py  common.py  errors.py  resolved.py  syntactic.py
cartograph/v2/mcp/: __init__.py  server.py
cartograph/v2/stages/annotate/: protocol.py  registry.py
cartograph/v2/stages/discover/: protocol.py  topology.py
cartograph/v2/stages/extract/: protocol.py  treesitter_extractor.py
cartograph/v2/stages/present/: cli.py  llm.py  markdown.py  protocol.py  util.py  web.py  web_models.py  web_serializers.py
cartograph/v2/stages/resolve/: protocol.py  ty_resolver.py
cartograph/v2/web/: __init__.py
cartograph/v2/web/static/: index.html
cartograph/web/: __init__.py  app.py  serializers.py
cartograph/web/static/: index.html
docs/: claude-setup-prompt.md  hld.md  journey-demo-roadmap.md  parser-hld.md  path-forward.md
docs/v2/: HLD.md  README.md  architecture.md  roadmap-v2.1.md  roadmap-v2.2.md  roadmap-v2.3.md  v1-vs-v2.md
scripts/: verify_blast_spec.py
tests/: conftest.py  test_cache_freshness.py  test_call_graph.py  test_celery_detector.py  test_django_ninja_detector.py  test_django_orm_detector.py  test_django_signals_detector.py  test_fastapi_detector.py  test_flask_detector.py  test_instance_resolution.py  test_integration.py  test_python_adapter.py  test_registry.py
tests/blast/: conftest.py  test_analyzer.py  test_api_blast.py  test_cli_blast.py  test_diff.py  test_renderer.py  test_tests_index.py
tests/fixtures/: celery_tasks.py  chained_calls.py  django_controller.py  django_signals.py  fastapi_app.py  flask_app.py  orm_operations.py  simple_functions.py
tests/fixtures/blast/: sample.diff
tests/fixtures/instance_import/: endpoints.py  service.py
tests/fixtures/multifile/: notifier.py  processor.py  store.py  worker.py
tests_v2/: test_analyses.py  test_benchmark.py  test_cache.py  test_cli.py  test_cli_presenter.py  test_coverage_analysis.py  test_diff_integration.py  test_framework_annotators.py  test_ir_base.py  test_ir_common.py  test_ir_stages.py  test_llm_presenter.py  test_lsp_jsonrpc.py  test_lsp_server.py  test_mcp_server.py  test_pipeline.py  test_topology_discoverer.py  test_treesitter_extractor.py  test_ty_resolver.py  test_v1_to_common.py  test_web_presenter.py
tests_v2/support/: mock_lsp_server.py
(+25 files in other folders)
