[tool.poetry]
name = "cartograph"
version = "0.1.0"
description = "AI-powered code flow explorer — don't read the code, read the story"
authors = ["Sandeep Kesarwani <sandeepkesar2310@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.11"
pre-commit = "^4.0"

[tool.poetry.scripts]
cartograph = "cartograph.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N802"]  # N802: ast.NodeVisitor requires camelCase method names (visit_Call, etc.)

[tool.ruff.lint.isort]
known-first-party = ["cartograph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external repos (deselect with '-m \"not integration\"')",
]
