[tool.poetry]
name = "cartograph-code"
version = "0.1.2"
description = "Static analysis tool that maps Python codebases into navigable flows"
authors = ["Sandeep Kesarwani <sandeepkesar2310@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cartograph"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0"
rich = "^13.0"
fastapi = "^0.115"
uvicorn = {version = "^0.34", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.11"
pre-commit = "^4.0"

[tool.poetry.scripts]
cartograph = "cartograph.cli:main"
carto = "cartograph.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N802"]  # N802: ast.NodeVisitor requires camelCase method names (visit_Call, etc.)

[tool.ruff.lint.isort]
known-first-party = ["cartograph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external repos (deselect with '-m \"not integration\"')",
]
