[project]
name = "cartograph-code"
version = "0.1.3"
description = "Static analysis tool that maps Python codebases into navigable flows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sandeep Kesarwani", email = "sandeepkesar2310@gmail.com" },
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "logfire>=3.0",
    "pydantic-ai>=0.0.14",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.25",
    "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
]

[project.scripts]
cartograph = "cartograph.cli:main"
carto = "cartograph.cli:main"
carto2 = "cartograph.v2.cli:main"

[project.urls]
Homepage = "https://github.com/sashu2310/cartograph"
Issues = "https://github.com/sashu2310/cartograph/issues"

# v2 requires the `ty` LSP binary on PATH for the resolve stage.
# Install separately: https://github.com/astral-sh/ty

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cartograph"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N802"]

[tool.ruff.lint.isort]
known-first-party = ["cartograph"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_v2"]
markers = [
    "integration: marks tests that require external repos (deselect with '-m \"not integration\"')",
]
asyncio_mode = "strict"
